# ovis_unity_prototype

./: .gitignore  LICENSE  README.md
Assets/: GhostArm.prefab  GhostMat.mat  InputCommunication.cs  InputController.cs  msgbrowser_settings.asset  test.cs
Assets/InputActions/: InputController.cs  InputMaster.cs  InputMaster.inputactions
Assets/Materials/: SelectedJoint.mat
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Robots/: model.urdf  ovis_model.urdf
Assets/Robots/ovis_description/urdf/: ovis.gazebo  (+3 more)
Assets/Scenes/: Map.prefab  Ovis.prefab  Ovisv2.prefab  ROSConnection.unity  ROSConnectionBackup.unity  ROSDemo.unity  RobotIK.unity  SampleScene.unity
Assets/Scripts/: ArmControler.cs  InputMaster.cs  InputMaster.inputactions  JointController.cs  JointGoalController.cs  OvisController.cs  RoboticArmIK.cs
Assets/WorldMaterialsFree/Built-In_RPMaterials/: BrushedIron_WMShader.mat
Assets/XR/: XRGeneralSettings.asset
Assets/XR/Settings/: Open XR Package Settings.asset
Assets/metal_06/: metal_06.mat
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset  TagManager.asset
ROS/src/ovis_description/: .gitignore  CMakeLists.txt  README.md  package.xml
ROS/src/ovis_msgs/: CMakeLists.txt  package.xml
ROS/src/ovis_msgs/msg/: OvisIKGoal.msg  OvisJointGoal.msg  OvisJoints.msg
ROS/src/ovis_msgs/srv/: HomeJoint.srv
ROS/src/unity_bridge/: CMakeLists.txt  package.xml
ROS/src/unity_bridge/launch/: bridge.launch
ROS/src/unity_bridge/src/: bridge.cpp
UserSettings/: EditorUserSettings.asset
(+74 files in other folders)
